# imagen_metadatos

./: .gitignore  README.md  main.py  main.spec  mainv.py  mainv.spec  pyproject.toml  requirements.txt
seguridad/: index.html  main.py
static/: index.html
templates/: index.html
